@@ -1,4 +1,7 @@
 Release ...
+* Operate correctly if stat(2) returns a zero st_blksize field. This is the
+  case for pipes on NetBSD 2.0 and resulted in no output when using tar to
+  write to them.
 * ls: If the target file name contained in a symbolic link is empty, print
   nothing (instead of "?") with the -l option etc.
 * It is now possible to use hard links at installation. The symbolic links
